@@ -1,4 +1,8 @@
 
+2017-07-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* reserved.c: fixed bug #402 - optional WITH clause functional
+
 2017-07-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y, reserved.c: added clauses COLOR and SIZE as PENDING
